Update Thai button texts

--- a/index.html
+++ b/index.html
@@ -214,16 +214,16 @@
       let yesScale = 1;
 
       const noTexts = [
-        "ไม่หรอก เชอะ",
-        "แน่ใจเหรอ?",
-        "จริงๆ นะ?",
-        "คิดใหม่นะ!",
+        "ไม่",
+        "แน่ใจหยอ?",
+        "จริงอ่ะ?",
+        "กด ตกลง นะค้าบบบ!",
         "ได้โปรด~",
-        "กดตกลงเถอะ!",
-        "อย่าทำแบบนี้กับแชมป์!",
-        "จะร้องไห้แล้วนะ...",
-        "หัวใจจะสลายแล้ว!",
-        "กดตกลงอยู่ตรงนั้น!",
+        "กดตกลงน้าาา!",
+        "งือออ อย่าทำแบบนี้กับแชมป์!",
+        "จะร้องไห้แล้วน้าาา ",
+        "หัวใจจะสลายแย้ว!",
+        "กดตกลงอยู่ตรงนั้นไง จิ้มๆๆ!",
       ];
 
       const noGifs = [
